--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -23,6 +23,7 @@ DDrawCompat21            = 0
 DDrawCompatExperimental  = 0
 DDrawCompatDisableGDIHook = 0
 DDrawResolutionHack      = 0
+Dinputto8                = 0
 DisableHighDPIScaling    = 0
 DSoundCtrl               = 0
 DxWnd                    = 0
