--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -11,6 +11,7 @@ AntiAliasing             = 0
 D3d8to9                  = 0
 Dd7to9                   = 0
 DDrawCompat              = 0
+Dinputto8                = 0
 DSoundCtrl               = 0
 EnableVSync              = 0
 
