--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -265,6 +265,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="ddraw\Versions\IDirectDrawSurface3.cpp" />
     <ClCompile Include="ddraw\Versions\IDirectDrawSurface4.cpp" />
     <ClCompile Include="ddraw\Versions\IDirectDrawSurface7.cpp" />
+    <ClCompile Include="dinput\dinput.cpp" />
     <ClCompile Include="Disasm\cmdlist.c" />
     <ClCompile Include="Disasm\Disasm.c" />
     <ClCompile Include="Dllmain\Dllmain.cpp" />
@@ -285,6 +286,24 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="External\d3d8to9\source\d3d8to9_volume.cpp" />
     <ClCompile Include="External\d3d8to9\source\d3d8types.cpp" />
     <ClCompile Include="External\d3d8to9\source\lookup_table.cpp" />
+    <ClCompile Include="External\dinputto8\IDirectInputDeviceX.cpp" />
+    <ClCompile Include="External\dinputto8\IDirectInputEffect.cpp" />
+    <ClCompile Include="External\dinputto8\IDirectInputEnum.cpp" />
+    <ClCompile Include="External\dinputto8\IDirectInputTypes.cpp" />
+    <ClCompile Include="External\dinputto8\IDirectInputX.cpp" />
+    <ClCompile Include="External\dinputto8\InterfaceQuery.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInput2A.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInput2W.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInput7A.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInput7W.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputA.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDevice2A.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDevice2W.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDevice7A.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDevice7W.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDeviceA.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDeviceW.cpp" />
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputW.cpp" />
     <ClCompile Include="External\Hooking\Hook.cpp" />
     <ClCompile Include="External\Hooking\HotPatch.cpp" />
     <ClCompile Include="External\Hooking\IATPatch.cpp" />
@@ -511,6 +530,7 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="ddraw\Versions\IDirectDrawSurface3.h" />
     <ClInclude Include="ddraw\Versions\IDirectDrawSurface4.h" />
     <ClInclude Include="ddraw\Versions\IDirectDrawSurface7.h" />
+    <ClInclude Include="dinput\dinputExternal.h" />
     <ClInclude Include="Disasm\disasm.h" />
     <ClInclude Include="Dllmain\Dllmain.h" />
     <ClInclude Include="Dllmain\dxwrapper.h" />
@@ -529,6 +549,25 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="External\d3d8to9\source\d3d8types.hpp" />
     <ClInclude Include="External\d3d8to9\source\d3dx9.hpp" />
     <ClInclude Include="External\d3d8to9\source\lookup_table.hpp" />
+    <ClInclude Include="External\dinputto8\AddressLookupTable.h" />
+    <ClInclude Include="External\dinputto8\dinputto8.h" />
+    <ClInclude Include="External\dinputto8\IDirectInputDeviceX.h" />
+    <ClInclude Include="External\dinputto8\IDirectInputEffect.h" />
+    <ClInclude Include="External\dinputto8\IDirectInputEnum.h" />
+    <ClInclude Include="External\dinputto8\IDirectInputTypes.h" />
+    <ClInclude Include="External\dinputto8\IDirectInputX.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInput2A.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInput2W.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInput7A.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInput7W.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputA.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDevice2A.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDevice2W.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDevice7A.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDevice7W.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDeviceA.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDeviceW.h" />
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputW.h" />
     <ClInclude Include="External\Hooking\Hook.h" />
     <ClInclude Include="External\Logging\Logging.h" />
     <ClInclude Include="Libraries\d3dx9.h" />
