--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -68,6 +68,15 @@
     <Filter Include="External\Hooking">
       <UniqueIdentifier>{5175dc21-9768-4e44-8840-288b7a3c143c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="External\dinputto8">
+      <UniqueIdentifier>{49dd9cee-8300-4420-b758-06f8560536e0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="External\dinputto8\Versions">
+      <UniqueIdentifier>{47d5c2d2-f6c0-4457-ac0d-86c41898132b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="dinput">
+      <UniqueIdentifier>{31efb075-cbdb-42f5-a17d-ac0dcb0dcba5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DSoundCtrl\DSoundCtrl.cpp">
@@ -660,6 +669,63 @@
     </ClCompile>
     <ClCompile Include="d3d8\d3d8.cpp">
       <Filter>d3d8</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInput2A.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInput2W.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInput7A.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInput7W.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputA.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDevice2A.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDevice2W.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDevice7A.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDevice7W.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDeviceA.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputDeviceW.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\Versions\IDirectInputW.cpp">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\IDirectInputDeviceX.cpp">
+      <Filter>External\dinputto8</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\IDirectInputEffect.cpp">
+      <Filter>External\dinputto8</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\IDirectInputEnum.cpp">
+      <Filter>External\dinputto8</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\IDirectInputTypes.cpp">
+      <Filter>External\dinputto8</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\IDirectInputX.cpp">
+      <Filter>External\dinputto8</Filter>
+    </ClCompile>
+    <ClCompile Include="External\dinputto8\InterfaceQuery.cpp">
+      <Filter>External\dinputto8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput\dinput.cpp">
+      <Filter>dinput</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1432,6 +1498,66 @@
     </ClInclude>
     <ClInclude Include="d3d8\d3d8External.h">
       <Filter>d3d8</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInput2A.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInput2W.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInput7A.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInput7W.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputA.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDevice2A.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDevice2W.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDevice7A.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDevice7W.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDeviceA.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputDeviceW.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\Versions\IDirectInputW.h">
+      <Filter>External\dinputto8\Versions</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\AddressLookupTable.h">
+      <Filter>External\dinputto8</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\dinputto8.h">
+      <Filter>External\dinputto8</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\IDirectInputDeviceX.h">
+      <Filter>External\dinputto8</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\IDirectInputEffect.h">
+      <Filter>External\dinputto8</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\IDirectInputEnum.h">
+      <Filter>External\dinputto8</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\IDirectInputTypes.h">
+      <Filter>External\dinputto8</Filter>
+    </ClInclude>
+    <ClInclude Include="External\dinputto8\IDirectInputX.h">
+      <Filter>External\dinputto8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput\dinputExternal.h">
+      <Filter>dinput</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
