Replace DSoundCtrl with generic dsound wrapper

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -28,6 +28,7 @@ DisableHighDPIScaling    = 0
 DSoundCtrl               = 0
 DxWnd                    = 0
 EnableDdrawWrapper       = 0
+EnableDsoundWrapper      = 0
 EnableVSync              = 0
 Force16bitColor          = 0
 Force32bitColor          = 0
