--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -269,12 +269,28 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="Disasm\cmdlist.c" />
     <ClCompile Include="Disasm\Disasm.c" />
     <ClCompile Include="Dllmain\Dllmain.cpp" />
-    <ClCompile Include="DSoundCtrl\DSoundCtrl.cpp" />
-    <ClCompile Include="DSoundCtrl\IDirectSound3DBufferEx.cpp" />
-    <ClCompile Include="DSoundCtrl\IDirectSound3DListenerEx.cpp" />
-    <ClCompile Include="DSoundCtrl\IDirectSoundBufferEx.cpp" />
-    <ClCompile Include="DSoundCtrl\IDirectSoundClassFactoryEx.cpp" />
-    <ClCompile Include="DSoundCtrl\IDirectSoundEx.cpp" />
+    <ClCompile Include="dsound\dsound.cpp" />
+    <ClCompile Include="dsound\IDirectSound3DBuffer8.cpp" />
+    <ClCompile Include="dsound\IDirectSound3DListener8.cpp" />
+    <ClCompile Include="dsound\IDirectSound8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundBuffer8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundCapture8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundCaptureBuffer8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundCaptureFXAec8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundCaptureFXNoiseSuppress8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFullDuplex8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXChorus8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXCompressor8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXDistortion8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXEcho8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXFlanger8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXGargle8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXI3DL2Reverb8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXParamEq8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundFXWavesReverb8.cpp" />
+    <ClCompile Include="dsound\IDirectSoundNotify8.cpp" />
+    <ClCompile Include="dsound\IKsPropertySet.cpp" />
+    <ClCompile Include="dsound\InterfaceQuery.cpp" />
     <ClCompile Include="DxWnd\v2_03_60_src\init.cpp" />
     <ClCompile Include="External\d3d8to9\source\d3d8to9_base.cpp" />
     <ClCompile Include="External\d3d8to9\source\d3d8to9_device.cpp" />
@@ -534,15 +550,29 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="Disasm\disasm.h" />
     <ClInclude Include="Dllmain\Dllmain.h" />
     <ClInclude Include="Dllmain\dxwrapper.h" />
-    <ClInclude Include="DSoundCtrl\dsound.h" />
-    <ClInclude Include="DSoundCtrl\DSoundCtrl.h" />
-    <ClInclude Include="DSoundCtrl\DSoundCtrlExternal.h" />
-    <ClInclude Include="DSoundCtrl\DSoundTypes.h" />
-    <ClInclude Include="DSoundCtrl\IDirectSound3DBufferEx.h" />
-    <ClInclude Include="DSoundCtrl\IDirectSound3DListenerEx.h" />
-    <ClInclude Include="DSoundCtrl\IDirectSoundBufferEx.h" />
-    <ClInclude Include="DSoundCtrl\IDirectSoundClassFactoryEx.h" />
-    <ClInclude Include="DSoundCtrl\IDirectSoundEx.h" />
+    <ClInclude Include="dsound\AddressLookupTable.h" />
+    <ClInclude Include="dsound\dsound.h" />
+    <ClInclude Include="dsound\dsoundExternal.h" />
+    <ClInclude Include="dsound\IDirectSound3DBuffer8.h" />
+    <ClInclude Include="dsound\IDirectSound3DListener8.h" />
+    <ClInclude Include="dsound\IDirectSound8.h" />
+    <ClInclude Include="dsound\IDirectSoundBuffer8.h" />
+    <ClInclude Include="dsound\IDirectSoundCapture8.h" />
+    <ClInclude Include="dsound\IDirectSoundCaptureBuffer8.h" />
+    <ClInclude Include="dsound\IDirectSoundCaptureFXAec8.h" />
+    <ClInclude Include="dsound\IDirectSoundCaptureFXNoiseSuppress8.h" />
+    <ClInclude Include="dsound\IDirectSoundFullDuplex8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXChorus8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXCompressor8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXDistortion8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXEcho8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXFlanger8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXGargle8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXI3DL2Reverb8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXParamEq8.h" />
+    <ClInclude Include="dsound\IDirectSoundFXWavesReverb8.h" />
+    <ClInclude Include="dsound\IDirectSoundNotify8.h" />
+    <ClInclude Include="dsound\IKsPropertySet.h" />
     <ClInclude Include="DxWnd\DxWndExternal.h" />
     <ClInclude Include="DxWnd\v2_03_60_src\dxwnd.h" />
     <ClInclude Include="External\d3d8to9\source\d3d8to9.hpp" />
