Add dinput8 wrapper

--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -265,6 +265,16 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClCompile Include="ddraw\Versions\IDirectDrawSurface3.cpp" />
     <ClCompile Include="ddraw\Versions\IDirectDrawSurface4.cpp" />
     <ClCompile Include="ddraw\Versions\IDirectDrawSurface7.cpp" />
+    <ClCompile Include="dinput8\dinput8.cpp" />
+    <ClCompile Include="dinput8\dinput8External.h" />
+    <ClCompile Include="dinput8\IDirectInput8A.cpp" />
+    <ClCompile Include="dinput8\IDirectInput8W.cpp" />
+    <ClCompile Include="dinput8\IDirectInputDevice8A.cpp" />
+    <ClCompile Include="dinput8\IDirectInputDevice8W.cpp" />
+    <ClCompile Include="dinput8\IDirectInputEffect.cpp" />
+    <ClCompile Include="dinput8\IDirectInputEnumDevice.cpp" />
+    <ClCompile Include="dinput8\IDirectInputEnumEffect.cpp" />
+    <ClCompile Include="dinput8\InterfaceQuery.cpp" />
     <ClCompile Include="dinput\dinput.cpp" />
     <ClCompile Include="Disasm\cmdlist.c" />
     <ClCompile Include="Disasm\Disasm.c" />
@@ -546,6 +556,15 @@ cmd /c "@echo off &amp;&amp; cd /D ""$(ProjectDir)Dllmain\"" &amp;&amp; type Bui
     <ClInclude Include="ddraw\Versions\IDirectDrawSurface3.h" />
     <ClInclude Include="ddraw\Versions\IDirectDrawSurface4.h" />
     <ClInclude Include="ddraw\Versions\IDirectDrawSurface7.h" />
+    <ClInclude Include="dinput8\AddressLookupTable.h" />
+    <ClInclude Include="dinput8\dinput8.h" />
+    <ClInclude Include="dinput8\IDirectInput8A.h" />
+    <ClInclude Include="dinput8\IDirectInput8W.h" />
+    <ClInclude Include="dinput8\IDirectInputDevice8A.h" />
+    <ClInclude Include="dinput8\IDirectInputDevice8W.h" />
+    <ClInclude Include="dinput8\IDirectInputEffect.h" />
+    <ClInclude Include="dinput8\IDirectInputEnumDevice.h" />
+    <ClInclude Include="dinput8\IDirectInputEnumEffect.h" />
     <ClInclude Include="dinput\dinputExternal.h" />
     <ClInclude Include="Disasm\disasm.h" />
     <ClInclude Include="Dllmain\Dllmain.h" />
