--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -77,6 +77,9 @@
     <Filter Include="dsound">
       <UniqueIdentifier>{5fdc656e-e8a0-43c4-a346-04c58b1e77cb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="dinput8">
+      <UniqueIdentifier>{e3daf364-ede8-460d-aac0-8e7016c2f18e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="libraries\dwmapi.cpp">
@@ -774,6 +777,36 @@
     </ClCompile>
     <ClCompile Include="dsound\InterfaceQuery.cpp">
       <Filter>dsound</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\dinput8.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\IDirectInput8A.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\IDirectInput8W.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\IDirectInputDevice8A.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\IDirectInputDevice8W.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\IDirectInputEffect.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\IDirectInputEnumDevice.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\IDirectInputEnumEffect.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\InterfaceQuery.cpp">
+      <Filter>dinput8</Filter>
+    </ClCompile>
+    <ClCompile Include="dinput8\dinput8External.h">
+      <Filter>dinput8</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1648,6 +1681,33 @@
     </ClInclude>
     <ClInclude Include="dsound\dsoundExternal.h">
       <Filter>dsound</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\AddressLookupTable.h">
+      <Filter>dinput8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\dinput8.h">
+      <Filter>dinput8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\IDirectInput8A.h">
+      <Filter>dinput8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\IDirectInput8W.h">
+      <Filter>dinput8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\IDirectInputDevice8A.h">
+      <Filter>dinput8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\IDirectInputDevice8W.h">
+      <Filter>dinput8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\IDirectInputEffect.h">
+      <Filter>dinput8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\IDirectInputEnumDevice.h">
+      <Filter>dinput8</Filter>
+    </ClInclude>
+    <ClInclude Include="dinput8\IDirectInputEnumEffect.h">
+      <Filter>dinput8</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
