Reorganize ini file settings

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -1,30 +1,66 @@
 ;; Config file for DirectX DLL Wrapper
 [General]
-RealDllPath              = 
-LoadCustomDllPath        = 
-RunProcess               = 
-WaitForProcess           = 0
-DisableLogging           = 0
-
-[Compatibility]
-AntiAliasing             = 0
-D3d8to9                  = 0
-Dd7to9                   = 0
-DDrawCompat              = 0
-Dinputto8                = 0
-DSoundCtrl               = 0
-EnableVSync              = 0
+RealDllPath               = AUTO
+WrapperMode               = AUTO
+LoadCustomDllPath         = 
+ExcludeProcess            = 
+IncludeProcess            = 
+RunProcess                = 
+WaitForProcess            = 0
+DisableLogging            = 0
 
 [Plugins]
-LoadPlugins              = 0
-LoadFromScriptsOnly      = 0
+LoadPlugins               = 0
+LoadFromScriptsOnly       = 0
 
-[Windowed]
-EnableWindowMode         = 0
-FullscreenWindowMode     = 0
-WindowModeBorder         = 0
+[Compatibility]
+Dd7to9                    = 0
+D3d8to9                   = 0
+DDrawCompat               = 0
+Dinputto8                 = 0
+DisableHighDPIScaling     = 0
+DSoundCtrl                = 0
+EnableDdrawWrapper        = 0
+
+[draw]
+ConvertToDirectDraw7      = 0
+ConvertToDirect3D7        = 0
+Force16bitColor           = 0
+Force32bitColor           = 0
+
+[DDrawCompat]
+DDrawCompat20             = 0
+DDrawCompat21             = 0
+DDrawCompatExperimental   = 0
+DDrawCompatDisableGDIHook = 0
+
+[d3d9]
+AntiAliasing              = 0
+AutoFrameSkip             = 0
+EnableVSync               = 0
+EnableWindowMode          = 0
+FullscreenWindowMode      = 0
+WindowModeBorder          = 0
 
 [FullScreen]
-FullScreen               = 0
-ForceWindowResize        = 0
-WaitForWindowChanges     = 0
+FullScreen                = 0
+ForceWindowResize         = 0
+WaitForWindowChanges      = 0
+
+[DSoundCtrl]
+Num2DBuffers              = 0
+Num3DBuffers              = 0
+ForceCertification        = 0
+ForceExclusiveMode        = 0
+ForceSoftwareMixing       = 0
+ForceHardwareMixing       = 0
+PreventSpeakerSetup       = 0
+ForceHQ3DSoftMixing       = 0
+ForceNonStaticBuffers     = 0
+ForceVoiceManagement      = 0
+ForcePrimaryBufferFormat  = 0
+PrimaryBufferBits         = 16
+PrimaryBufferSamples      = 44100
+PrimaryBufferChannels     = 2
+ForceSpeakerConfig        = 0
+SpeakerConfig             = 6
