--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -1,98 +1,102 @@
 ;; Config file for DirectX DLL Wrapper
 [General]
-RealDllPath              = AUTO
-WrapperMode              = AUTO
-LoadCustomDllPath        = 
-ExcludeProcess           = 
-IncludeProcess           = 
-RunProcess               = 
-WaitForProcess           = 0
-DisableLogging           = 0
-
-[Compatibility]
-AntiAliasing             = 0
-AutoFrameSkip            = 0
-CacheClipPlane           = 0
-ConvertToDirectDraw7     = 0
-ConvertToDirect3D7       = 0
-Dd7to9                   = 0
-D3d8to9                  = 0
-DDrawCompat              = 0
-DDrawCompat20            = 0
-DDrawCompat21            = 0
-DDrawCompatExperimental  = 0
-DDrawCompatDisableGDIHook = 0
-DDrawResolutionHack      = 0
-Dinputto8                = 0
-DisableHighDPIScaling    = 0
-DSoundCtrl               = 0
-DxWnd                    = 0
-EnableDdrawWrapper       = 0
-EnableDsoundWrapper      = 0
-EnableVSync              = 0
-Force16bitColor          = 0
-Force32bitColor          = 0
-ForceTermination         = 0
-HandleExceptions         = 0
-ResetScreenRes           = 0
-SingleProcAffinity       = 0
+RealDllPath               = AUTO
+WrapperMode               = AUTO
+LoadCustomDllPath         = 
+ExcludeProcess            = 
+IncludeProcess            = 
+RunProcess                = 
+WaitForProcess            = 0
+DisableLogging            = 0
 
 [Plugins]
-LoadPlugins              = 0
-LoadFromScriptsOnly      = 0
+LoadPlugins               = 0
+LoadFromScriptsOnly       = 0
 
-[Windowed]
-EnableWindowMode         = 0
-FullscreenWindowMode     = 0
-WindowModeBorder         = 0
+[Compatibility]
+Dd7to9                    = 0
+D3d8to9                   = 0
+DDrawCompat               = 0
+DDrawResolutionHack       = 0
+Dinputto8                 = 0
+DisableHighDPIScaling     = 0
+DSoundCtrl                = 0
+DxWnd                     = 0
+EnableDdrawWrapper        = 0
+EnableDsoundWrapper       = 0
+ForceTermination          = 0
+HandleExceptions          = 0
+ResetScreenRes            = 0
+SingleProcAffinity        = 0
+
+[draw]
+ConvertToDirectDraw7      = 0
+ConvertToDirect3D7        = 0
+Force16bitColor           = 0
+Force32bitColor           = 0
+
+[DDrawCompat]
+DDrawCompat20             = 0
+DDrawCompat21             = 0
+DDrawCompatExperimental   = 0
+DDrawCompatDisableGDIHook = 0
+
+[d3d9]
+AntiAliasing              = 0
+AutoFrameSkip             = 0
+CacheClipPlane            = 0
+EnableVSync               = 0
+EnableWindowMode          = 0
+FullscreenWindowMode      = 0
+WindowModeBorder          = 0
 
 [FullScreen]
-FullScreen               = 0
-ForceWindowResize        = 0
-SendAltEnter             = 0
-WaitForWindowChanges     = 0
-LoopSleepTime            = 120
-WindowSleepTime          = 500
-SetFullScreenLayer       = 0
-SetNamedLayer            = 
-IgnoreWindowName         = 
+FullScreen                = 0
+ForceWindowResize         = 0
+SendAltEnter              = 0
+WaitForWindowChanges      = 0
+LoopSleepTime             = 120
+WindowSleepTime           = 500
+SetFullScreenLayer        = 0
+SetNamedLayer             = 
+IgnoreWindowName          = 
 
 [DSoundCtrl]
-Num2DBuffers             = 0
-Num3DBuffers             = 0
-ForceCertification       = 0
-ForceExclusiveMode       = 0
-ForceSoftwareMixing      = 0
-ForceHardwareMixing      = 0
-PreventSpeakerSetup      = 0
-ForceHQ3DSoftMixing      = 0
-ForceNonStaticBuffers    = 0
-ForceVoiceManagement     = 0
-ForcePrimaryBufferFormat = 0
-PrimaryBufferBits        = 16
-PrimaryBufferSamples     = 44100
-PrimaryBufferChannels    = 2
-ForceSpeakerConfig       = 0
-SpeakerConfig            = 6
-StoppedDriverWorkaround  = 0
+Num2DBuffers              = 0
+Num3DBuffers              = 0
+ForceCertification        = 0
+ForceExclusiveMode        = 0
+ForceSoftwareMixing       = 0
+ForceHardwareMixing       = 0
+PreventSpeakerSetup       = 0
+ForceHQ3DSoftMixing       = 0
+ForceNonStaticBuffers     = 0
+ForceVoiceManagement      = 0
+ForcePrimaryBufferFormat  = 0
+PrimaryBufferBits         = 16
+PrimaryBufferSamples      = 44100
+PrimaryBufferChannels     = 2
+ForceSpeakerConfig        = 0
+SpeakerConfig             = 6
+StoppedDriverWorkaround   = 0
 
 [AppCompatData]
-LockEmulation            = 0
-BltEmulation             = 0
-ForceLockNoWindow        = 0
-ForceBltNoWindow         = 0
-LockColorkey             = 0
-FullscreenWithDWM        = 0
-DisableLockEmulation     = 0
-EnableOverlays           = 0
-DisableSurfaceLocks      = 0
-RedirectPrimarySurfBlts  = 0
-StripBorderStyle         = 0
-DisableMaxWindowedMode   = 0
+LockEmulation             = 0
+BltEmulation              = 0
+ForceLockNoWindow         = 0
+ForceBltNoWindow          = 0
+LockColorkey              = 0
+FullscreenWithDWM         = 0
+DisableLockEmulation      = 0
+EnableOverlays            = 0
+DisableSurfaceLocks       = 0
+RedirectPrimarySurfBlts   = 0
+StripBorderStyle          = 0
+DisableMaxWindowedMode    = 0
 
 [WriteMemory]
-VerificationAddress      = 0x00000000
-VerificationBytes        = 0x00
-ResetMemoryAfter         = 0
-AddressPointer           = 0x00000000
-BytesToWrite             = 0x00
+VerificationAddress       = 0x00000000
+VerificationBytes         = 0x00
+ResetMemoryAfter          = 0
+AddressPointer            = 0x00000000
+BytesToWrite              = 0x00
