--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -33,6 +33,12 @@ DDrawCompat21             = 0
 DDrawCompatExperimental   = 0
 DDrawCompatDisableGDIHook = 0
 
+[Dd7to9]
+DdrawUseNativeResolution  = 0
+DdrawOverrideWidth        = 0
+DdrawOverrideHeight       = 0
+DdrawOverrideRefreshRate  = 0
+
 [d3d9]
 AntiAliasing              = 0
 AutoFrameSkip             = 0
