Move AutoFrameSkip back to Dd7to9

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -41,9 +41,15 @@ DDrawCompat21             = 0
 DDrawCompatExperimental   = 0
 DDrawCompatDisableGDIHook = 0
 
+[Dd7to9]
+AutoFrameSkip             = 0
+DdrawUseNativeResolution  = 0
+DdrawOverrideWidth        = 0
+DdrawOverrideHeight       = 0
+DdrawOverrideRefreshRate  = 0
+
 [d3d9]
 AntiAliasing              = 0
-AutoFrameSkip             = 0
 CacheClipPlane            = 0
 EnableVSync               = 0
 EnableWindowMode          = 0
