Use PixelShader for palettes in ddraw
Update ddraw to use pixel shaders for 8-bit palette surfaces.

--- a/dxwrapper.vcxproj.filters
+++ b/dxwrapper.vcxproj.filters
@@ -1715,6 +1715,9 @@
     <ClInclude Include="IClassFactory\IClassFactory.h">
       <Filter>IClassFactory</Filter>
     </ClInclude>
+    <ClInclude Include="ddraw\d3d9ShaderPalette.h">
+      <Filter>ddraw</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Dllmain\BuildNo.rc">
