--- a/dxwrapper.vcxproj
+++ b/dxwrapper.vcxproj
@@ -515,6 +515,7 @@ cmd /q /c "cd /D ""$(ProjectDir)d3d8\"" &amp;&amp; del build.bat"</Command>
     <ClInclude Include="DDrawCompat\v0.2.1\ScopedCriticalSection.h" />
     <ClInclude Include="DDrawCompat\v0.2.1\Time.h" />
     <ClInclude Include="ddraw\AddressLookupTable.h" />
+    <ClInclude Include="ddraw\d3d9ShaderPalette.h" />
     <ClInclude Include="ddraw\ddraw.h" />
     <ClInclude Include="ddraw\ddrawExternal.h" />
     <ClInclude Include="ddraw\IDirect3DDeviceX.h" />
