Implement StretchRect plus color key
 - Implement StretchRect plus color key
 - Simplify StretchRect and UpdateSurface
 - Use surface format for palettes
 - Add multi-threaded support
 - Fix Alt+Tab
 - Add check for Mode X

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -20,6 +20,7 @@ DDrawCompat               = 0
 Dinputto8                 = 0
 DSoundCtrl                = 0
 EnableDdrawWrapper        = 0
+HandleExceptions          = 0
 
 [draw]
 ConvertToDirectDraw7      = 0
