Fix some error checking and 24-bit support

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -40,6 +40,7 @@ DDrawCompat20             = 0
 DDrawCompat21             = 0
 DDrawCompatExperimental   = 0
 DDrawCompatDisableGDIHook = 0
+DDrawCompatNoProcAffinity = 0
 
 [Dd7to9]
 AutoFrameSkip             = 0
