--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -21,6 +21,7 @@ Dinputto8                 = 0
 DSoundCtrl                = 0
 EnableDdrawWrapper        = 0
 HandleExceptions          = 0
+SingleProcAffinity        = 0
 
 [draw]
 ConvertToDirectDraw7      = 0
@@ -33,6 +34,7 @@ DDrawCompat20             = 0
 DDrawCompat21             = 0
 DDrawCompatExperimental   = 0
 DDrawCompatDisableGDIHook = 0
+DDrawCompatNoProcAffinity = 0
 
 [Dd7to9]
 AutoFrameSkip             = 0
