Update SingleProcAffinity and DdrawOverrideBitMode
- Allow specified CPU core to be used with SingleProcAffinity
- Allow specifeid bit mode to be used with DdrawOverrideBitMode
- Update AntiAliasing so '1' equals highest supported mode
- Update settings to check for enable strings ('on', 'true', 'enable', etc.) even for DWORD values

--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -29,18 +29,17 @@ HandleExceptions          = 0
 ResetScreenRes            = 0
 SingleProcAffinity        = 0
 
-[draw]
-ConvertToDirectDraw7      = 0
-ConvertToDirect3D7        = 0
-Force16bitColor           = 0
-Force32bitColor           = 0
-
 [DDrawCompat]
 DDrawCompat20             = 0
 DDrawCompat21             = 0
 DDrawCompatExperimental   = 0
 DDrawCompatDisableGDIHook = 0
 DDrawCompatNoProcAffinity = 0
+
+[ddraw]
+ConvertToDirectDraw7      = 0
+ConvertToDirect3D7        = 0
+DdrawOverrideBitMode      = 0
 
 [Dd7to9]
 AutoFrameSkip             = 0
