Add DisableGameUX to prevent rundll32.exe high CPU

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -18,6 +18,7 @@ Dd7to9                    = 0
 D3d8to9                   = 0
 DDrawCompat               = 0
 Dinputto8                 = 0
+DisableGameUX             = 0
 DSoundCtrl                = 0
 EnableDdrawWrapper        = 0
 HandleExceptions          = 0
