--- a/Settings/AllSettings.ini
+++ b/Settings/AllSettings.ini
@@ -20,6 +20,7 @@ DDrawCompat               = 0
 DDrawResolutionHack       = 0
 Dinputto8                 = 0
 DisableHighDPIScaling     = 0
+DisableGameUX             = 0
 DSoundCtrl                = 0
 DxWnd                     = 0
 EnableDdrawWrapper        = 0
