Fix a few ddraw things

--- a/Settings/Stub.ini
+++ b/Settings/Stub.ini
@@ -1,6 +1,6 @@
 ;; Config file for Stub to dxwrapper
 [General]
-RealDllPath       = 
-WrapperMode       = 
+RealDllPath       = AUTO
+WrapperMode       = AUTO
 StubOnly          = 0
 LoadFromMemory    = 0
