Add option to maintain aspect ratio
- Add option to maintain aspect ratio
- Fix palette issue when stretching the screen

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -38,6 +38,7 @@ DdrawOverrideBitMode      = 0
 
 [Dd7to9]
 AutoFrameSkip             = 0
+DdrawMaintainAspectRatio  = 0
 DdrawUseNativeResolution  = 0
 DdrawOverrideWidth        = 0
 DdrawOverrideHeight       = 0
