Fix several d3d9 issues
- Fix AntiAliasing issues
- Changes how d3d9 shared devies work
- Fix QueryInterface issues
- Update how windowed mode works
- Only hook GetModuleFileName when running from memory

--- a/Settings/Settings.ini
+++ b/Settings/Settings.ini
@@ -20,6 +20,7 @@ DDrawCompat                = 0
 Dinputto8                  = 0
 DisableGameUX              = 0
 DSoundCtrl                 = 0
+DxWnd                      = 0
 EnableDdrawWrapper         = 0
 HandleExceptions           = 0
 SingleProcAffinity         = 0
